--- a/HideMainImage.html
+++ b/HideMainImage.html
@@ -1,2 +1,2 @@
-<!-- Hide Main Image Spacing -->
-<style> .mainart-container.c-article-header__mainart{  display: none; } </style>
+<!-- Hide Main Image and remove Spacing -->
+<style> .mainart-container.c-article-header__mainart{ padding: 0px; display: none; } </style>
