--- a/AEM-liststype.html
+++ b/AEM-liststype.html
@@ -21,9 +21,9 @@ OL has no styling - check contests
 
 <!--
 Bullet List
-Existing has styling - leave alone???
+Existing has styling - but doesn't align content to bullet. use this to have alignment. 
 -->
-<ul>
+<ul class="sponsoredarticle">
 <li>Only newspapers or newsletters distributed throughout the school and available to the entire student body will be considered. The newspaper must be the ‘official’ school newspaper and sanctioned by the school faculty.</li>
 	<li>Newspapers or newsletters, including their design and layout, must be published by the students, with or without the participation or guidance of teachers. A publication containing student work but published entirely by teachers without student participation will not be considered.</li>
 </ul>
